--- a/IADT_Fase_1.ipynb
+++ b/IADT_Fase_1.ipynb
@@ -1128,7 +1128,7 @@
     "id": "21Pn1av0xgHW"
    },
    "source": [
-    "# Conclusão\n",
+    "# Conclusão 🚧\n",
     "\n",
     "Este notebook teve como objetivo prever os custos médicos individuais (`charges`) com base em dados demográficos e comportamentais simulados, como idade, IMC, número de filhos, tabagismo e região. E encontramos os seguintes insights:\n",
     "\n",
