--- a/IADT_Fase_1.ipynb
+++ b/IADT_Fase_1.ipynb
@@ -1622,17 +1622,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O Gradient Boosting teve melhor performance porque:\n",
-    "\n",
-    "Captura relações não-lineares entre variáveis (como o impacto de ser fumante com IMC alto);\n",
-    "\n",
-    "Aprende interações complexas entre as variáveis de forma sequencial;\n",
-    "\n",
-    "Lida melhor com outliers nos custos (charges);\n",
-    "\n",
-    "Tem baixo viés e boa generalização, ideal para dados tabulares como esse;\n",
-    "\n",
-    "Funciona bem mesmo com um dataset pequeno, como o insurance.csv."
+    "💡 O Gradient Boosting teve melhor performance porque:\n",
+    "- Captura relações não-lineares entre variáveis (como o impacto de ser fumante com IMC alto);\n",
+    "- Aprende interações complexas entre as variáveis de forma sequencial;\n",
+    "- Lida melhor com outliers nos custos (charges);\n",
+    "- Tem baixo viés e boa generalização, ideal para dados tabulares como esse;\n",
+    "- Funciona bem mesmo com um dataset pequeno, como o insurance.csv."
    ]
   },
   {
