--- a/IADT_Fase_1.ipynb
+++ b/IADT_Fase_1.ipynb
@@ -1622,7 +1622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "💡 O Gradient Boosting teve melhor performance porque:\n",
+    "💡 Provavelmente, o Gradient Boosting teve melhor performance porque:\n",
     "- Captura relações não-lineares entre variáveis (como o impacto de ser fumante com IMC alto);\n",
     "- Aprende interações complexas entre as variáveis de forma sequencial;\n",
     "- Lida melhor com outliers nos custos (charges);\n",
